--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background: url(https://i.imgur.com/E6lbGD5.jpghttps://i.imgur.com/26awOKV.jpg);
     font-family: 'Gloria Hallelujah', cursive, sans-serif;
-    background-size: auto;
+    background-size: fill;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
